@@ -250,3 +250,13 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
+[Unit21]
+FileName=screenshot.c
+CompileCpp=0
+Folder=
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
